--- a/Portfolio/WEBSITE_1/src/index.html
+++ b/Portfolio/WEBSITE_1/src/index.html
@@ -19,9 +19,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="container">
+<body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark py-3 border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3">
         <div class="container ">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <div class="me-2 bg-primary rounded-2" style="width:36px;height:28px;"></div>
@@ -55,6 +55,7 @@
             </div>
         </div>
     </nav>
+    <div class="border-bottom"></div>
 
     <!-- HERO -->
     <header class="container py-5 position-relative" style="z-index:1;">
@@ -69,11 +70,11 @@
 
                 <!-- big outlined background word -->
                 <div class="position-relative d-flex justify-content-center align-items-center">
-                    <div class="bg-outline position-absolute" style="font-size:10rem">Photographer</div>
+                    <div class="bg-outline position-absolute container" style="font-size:10rem;">Photographer</div>
 
                     <!-- profile image sits above the big word -->
                     <img src="images/main-demo.webp" alt="profile"
-                        class="profile-img mx-auto d-block position-relative" />
+                        class="profile-img mx-auto img-fluid d-block position-relative " />
                 </div>
             </div>
         </div>
@@ -84,7 +85,15 @@
         <div class="side-badge">34+ PRE-BUILT SITES</div>
     </div>
 
-    
+    <!-- messenger floating button bottom-left -->
+    <div class="position-fixed start-0 bottom-0 m-4" style="z-index:5;">
+        <div class="messenger-btn">
+            <!-- simple icon letter -->
+            <span class="text-white fw-bold">💬</span>
+        </div>
+    </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
