--- a/Portfolio/WEBSITE_1/src/index.html
+++ b/Portfolio/WEBSITE_1/src/index.html
@@ -62,21 +62,21 @@
         <div class="row align-items-center" style="min-height:70vh;">
             <div class="col-12 text-center">
 
-                <!-- top small intro -->
+                <!-- Hand -->
                 <div class="d-flex justify-content-center align-items-center gap-3 mt-0">
                     <div style="font-size:3rem;">👋</div>
                     <h1 class="h1 text-white mt-2">My name is Sahil Gohil a freelancer</h1>
                 </div>
 
-                <!-- big outlined background word -->
-                <div class="position-relative d-flex justify-content-center align-items-center">
-                    <div class="bg-outline position-absolute container" style="font-size:10rem;">Photographer</div>
+                <!-- big Photographer  -->
+                <!-- <div class="position-relative d-flex justify-content-center align-items-center">
+                    <div class="bg-outline position-absolute container" style="font-size:10rem;">Photographer</div> -->
 
-                    <!-- profile image sits above the big word -->
-                    <img src="images/main-demo.webp" alt="profile"
-                        class="profile-img mx-auto img-fluid d-block position-relative " />
-                </div>
+                <!-- profile image sits above the big word -->
+                <img src="images/main-demo.webp" alt="profile"
+                    class="profile-img mx-auto img-fluid d-block position-relative " />
             </div>
+        </div>
         </div>
     </header>
 
@@ -93,6 +93,133 @@
         </div>
     </div>
 
+    <!-- ABOUT SECTION -->
+    <section class="container py-5">
+        <div class="row align-items-center g-5">
+
+            <div class="col-lg-5">
+                <div class="glow-box">
+                    <img src="images/01.webp" class="img-fluid rounded-4">
+                </div>
+            </div>
+
+            <div class="col-lg-7">
+                <p class="text-info fw-semibold mb-1">ABOUT ME</p>
+                <h2 class="fw-bold mb-3">Boost Business Strategic <br> Solutions With Us</h2>
+                <p>
+                    Business consulting consultants provide expert advice and guide businesses to
+                    improve performance, efficiency & organization.
+                </p>
+
+                <div class="row g-3 mt-4">
+                    <div class="col-md-6">
+                        <div class="service-box">
+                            <div class="icon-circle">📎</div>
+                            <h5 class="fw-bold">Business</h5>
+                            <p class="mb-0">Each one showcases my approach</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="service-box">
+                            <div class="icon-circle">📣</div>
+                            <h5 class="fw-bold">Partners</h5>
+                            <p class="mb-0">Business consulting helps to provide solutions</p>
+                        </div>
+                    </div>
+                </div>
+
+                <a href="#" class="btn btn-outline-info mt-4 px-4 py-2 rounded-pill">
+                    Read More About Me →
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- STATS -->
+    <section class="container py-3">
+        <div class="row text-center g-3">
+            <div class="col-6 col-md-3">
+                <div class="stats-box">
+                    <h3 class="fw-bold">20k</h3>
+                    <p>Our Projects</p>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-3">
+                <div class="stats-box">
+                    <h3 class="fw-bold">10k</h3>
+                    <p>Happy Clients</p>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-3">
+                <div class="stats-box">
+                    <h3 class="fw-bold">200+</h3>
+                    <p>Global Awards</p>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-3">
+                <div class="stats-box">
+                    <h3 class="fw-bold">2k+</h3>
+                    <p>Our Active Clients</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <div class="container py-5">
+        <p class="text-center section-title">HELLO WORLD</p>
+        <h2 class="text-center mb-5">What I Provide For You</h2>
+        <div class="row g-4">
+
+            <!-- UI/UX -->
+            <div class="col-md-6">
+                <div class="service-card h-100">
+                    <div class="icon-box">
+                        <i class="bi bi-code-slash"></i>
+                    </div>
+                    <h5 class="fw-bold">UI/UX Design</h5>
+                    <p>Each one showcases my approach and dedication to detail, creativity and modern design.</p>
+                </div>
+            </div>
+
+            <!-- Web Dev -->
+            <div class="col-md-6">
+                <div class="service-card h-100">
+                    <div class="icon-box">
+                        <i class="bi bi-lightbulb"></i>
+                    </div>
+                    <h5 class="fw-bold">Web Development</h5>
+                    <p>I provide expert advice and creative solutions for all modern web development needs.</p>
+                </div>
+            </div>
+
+            <!-- Business -->
+            <div class="col-md-6">
+                <div class="service-card h-100">
+                    <div class="icon-box">
+                        <i class="bi bi-briefcase"></i>
+                    </div>
+                    <h5 class="fw-bold">Business Solutions</h5>
+                    <p>Strategies & tools designed to improve business efficiency, profitability, and operations.</p>
+                </div>
+            </div>
+
+            <!-- Profit Partners -->
+            <div class="col-md-6">
+                <div class="service-card h-100">
+                    <div class="icon-box">
+                        <i class="bi bi-people"></i>
+                    </div>
+                    <h5 class="fw-bold">Profit Partners</h5>
+                    <p>We collaborate to maximize revenue, streamline operations, and drive long-term success.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
